--- a/soldpress/custom/boostrap.css
+++ b/soldpress/custom/boostrap.css
@@ -2616,6 +2616,10 @@
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+/* cambio para que quede bien el buscador */
+.sp .well3 {
+    padding: 0;
+}
 .sp .well {
   min-height: 20px;
   /*padding: 19px;*/
@@ -2823,7 +2827,10 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+/*
+    El margen esta dado por el padding del pariente
   margin-left: 1.5em;
+*/
 }
 .sp .btn-block + .btn-block {
   margin-top: 3px;
