--- a/soldpress/custom/boostrap.css
+++ b/soldpress/custom/boostrap.css
@@ -2618,7 +2618,7 @@
 }
 /* cambio para que quede bien el buscador */
 .sp .well3 {
-    padding: 0;
+    padding: 0 0 0 1em;
 }
 .sp .well {
   min-height: 20px;
